basic vanilla finished

--- a/public/signup.html
+++ b/public/signup.html
@@ -7,11 +7,13 @@
 <body>
   <h1>Yodlr Registration Portal</h1>
   <form>
-    Email: <input type="email" name="email"></br>
-    <button type="submit">Submit</button>
+    Email: <input type="email" id="email" name="email"></br>
+    <button type="submit" id="submit">Submit</button>
   </form>
   <p>
-    <a href="/admin.html">Admin Page</a>
+    <a href="/admin.html">Admin Page</a><br>
+    <a href="/index.html">Home Page</a>
   </p>
+  <script src="./js/signup.js"></script>
 </body>
 </html>
