--- a/public/admin.html
+++ b/public/admin.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset=utf-8>
-  <title>Yodlr Admin Page</title>
-</head>
-<body>
-  List user data here
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Yodlr Admin Page</title>
+  </head>
+  <body>
+    <h1>User List</h1>
+    <a href="/index.html">Home Page</a>
+    <div id="root"></div>
+    <script type="module" src="./js/admin.js"></script>
+  </body>
 </html>
